// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AppHeader /> > should not render the banner when no flags are set 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░

Поради для початку роботи:
1. Ставте запитання, редагуйте файли або виконуйте команди.
2. Будьте конкретними для отримання найкращих результатів.
3. Створюйте файли GEMINI.md, щоб налаштувати вашу взаємодію з Gemini.
4. /help для отримання додаткової інформації."
`;

exports[`<AppHeader /> > should not render the banner when previewFeatures is enabled 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░

Поради для початку роботи:
1. Ставте запитання, редагуйте файли або виконуйте команди.
2. Будьте конкретними для отримання найкращих результатів.
3. Створюйте файли GEMINI.md, щоб налаштувати вашу взаємодію з Gemini.
4. /help для отримання додаткової інформації."
`;

exports[`<AppHeader /> > should not render the default banner if shown count is 5 or more 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░

Поради для початку роботи:
1. Ставте запитання, редагуйте файли або виконуйте команди.
2. Будьте конкретними для отримання найкращих результатів.
3. Створюйте файли GEMINI.md, щоб налаштувати вашу взаємодію з Gemini.
4. /help для отримання додаткової інформації."
`;

exports[`<AppHeader /> > should render the banner when previewFeatures is disabled 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░

╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ This is the default banner                                                                                          │
╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Поради для початку роботи:
1. Ставте запитання, редагуйте файли або виконуйте команди.
2. Будьте конкретними для отримання найкращих результатів.
3. Створюйте файли GEMINI.md, щоб налаштувати вашу взаємодію з Gemini.
4. /help для отримання додаткової інформації."
`;

exports[`<AppHeader /> > should render the banner with default text 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░

╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ This is the default banner                                                                                          │
╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Поради для початку роботи:
1. Ставте запитання, редагуйте файли або виконуйте команди.
2. Будьте конкретними для отримання найкращих результатів.
3. Створюйте файли GEMINI.md, щоб налаштувати вашу взаємодію з Gemini.
4. /help для отримання додаткової інформації."
`;

exports[`<AppHeader /> > should render the banner with warning text 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░

╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ There are capacity issues                                                                                           │
╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Поради для початку роботи:
1. Ставте запитання, редагуйте файли або виконуйте команди.
2. Будьте конкретними для отримання найкращих результатів.
3. Створюйте файли GEMINI.md, щоб налаштувати вашу взаємодію з Gemini.
4. /help для отримання додаткової інформації."
`;
